# django-notifications

./: AUTHORS.txt  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: test.yml
notifications/: __init__.py  urls.py  views.py
notifications/base/: models.py
notifications/migrations/: 0011_alter_notification_data.py
notifications/templatetags/: notifications_tags.py
notifications/tests/: tests.py  urls.py
