[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-notifications-x"
version = "0.1.1"
description = "GitHub notifications alike app for Django."
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Justin Quick", email = "justquick@gmail.com" },
    { name = "Aaron Williamson" },
    { name = "Jordan Reiter" },
    { name = "Manuel Aristaran" },
    { name = "Darrell Hoy" },
    { name = "Ken \"Elf\" Mathieu Sternberg" },
    { name = "Josh Ourisman" },
    { name = "Trever Shick" },
    { name = "Sandip Agrawal" },
    { name = "Piet Delport" },
    { name = "Steve Ivy" },
    { name = "Ben Slavin" },
    { name = "Jason Culverhouse" },
    { name = "Dave Harrington" },
    { name = "Pedro Bur—n" },
    { name = "Ryan Quigley" },
    { name = "Neelesh Shastry" },
    { name = "David Gouldin", email = "david@gould.in" },
    { name = "Donald Stufft" },
    { name = "Nolan Brubaker" },
    { name = "Herman Schaaf" },
    { name = "Walter Scheper" },
    { name = "Chris Beaven" },
    { name = "Vineet Naik" },
    { name = "Walter Scheper" },
    { name = "Brant Young" },
    { name = "Matthew Schinckel", email = "matt@schinckel.net" },
    { name = "Mirat Can Bayrak" },
    { name = "Konrad Hałas" },
    { name = "Peppe Bergqvist" },
]
maintainers = [
    { name = "Panov Yury" },
]
keywords = [
    "action",
    "django",
    "event",
    "github",
    "notifications",
    "stream",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "django-model-utils>=3.1.0",
    "django>=4.2,<5.3",
    "jsonfield>=2.1.0",
    "packaging",
    "swapper",
]

[project.urls]
Homepage = "https://github.com/PanovYury/django-notifications"

[tool.hatch.build.targets.sdist]
include = [
    "/notifications",
    "/README.md",
    "/AUTHORS.txt",
    "/LICENSE.txt",
    "/CHANGELOG.md"
]

[tool.hatch.build.targets.wheel]
packages = ["notifications"]
exclude = ["/notifications/tests"]
